--- a/eg_media_starter-main/index.html
+++ b/eg_media_starter-main/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Media Starter</title>
   <link rel="stylesheet" href="css/modnorm.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <!-- <link rel="stylesheet" href="css/nocom.css"> -->
+  <link rel="stylesheet" href="css/nocom.css"> 
 </head>
 <body>
   <header class="top-nav">
