--- a/eg_media_starter-main/index.html
+++ b/eg_media_starter-main/index.html
@@ -20,21 +20,44 @@
     <a href="#" class="nav-link" id="trigram" onclick="navToggle()"></a>
   </header>
   <main>
+  
+    </section>
     <section class="slideshow">
-      <!--slider goes here-->
-      <h2>slideshow here</h2>
+      <figure class="slides">
+        <img src="https://picsum.photos/seed/50th/1440/520" />
+      </figure>
+      <figure class="slides">
+        <img src="https://picsum.photos/seed/2nd/1440/520" />
+      </figure>
+      <figure class="slides">
+        <img src="https://picsum.photos/seed/3rd/1440/520" />
+      </figure>
+      <figure class="slides">
+        <img src="https://picsum.photos/seed/4th/1440/520" />
+      </figure>
+      <figure class="slides">
+        <img src="https://picsum.photos/seed/5th/1440/520" />
+      </figure>
+      <figure class="slides">
+        <img src="https://picsum.photos/seed/6th/1440/520" />
+      </figure>
       <div class="controls">
-        <button>&#8249;</button>
-        <button>&#8250;</button>
+        <button class="prev" onclick="plusSlides(-1)">&#8249;</button>
+        <button class="next" onclick="plusSlides(1)">&#8250;</button>
+      </div>
+      <div class="caption-wrap">
+        <p id="caption"></p>
       </div>
     </section>
-    <section class="hero">
-      <h2>Images from <em>Lorem Picsum</em></h2>
-      <p>Visit <a href="https://picsum.photos/">that site</a> to learn how to use them.</p>
-    </section>
+
+
+
+
+
     <section class="grid-cont">
       <article class="card">
         <div class="card-content">
+          <span class="close"><button class="close-btn">&times;</button></span>
           <img src="https://picsum.photos/id/11/480/320" alt="alt-text reads . . .">
           <div class="card-text">
             <h4>Title</h4>
@@ -46,6 +69,7 @@
 
     <article class="card">
       <div class="card-content">
+        <span class="close"><button class="close-btn">&times;</button></span>
         <img src="https://picsum.photos/id/10/480/320" alt="alt-text reads . . .">
         <div class="card-text">
           <h4>Title</h4>
@@ -57,6 +81,7 @@
 
     <article class="card">
       <div class="card-content">
+        <span class="close"><button class="close-btn">&times;</button></span>
         <img src="https://picsum.photos/id/432/480/320" alt="alt-text reads . . .">
         <div class="card-text">
           <h4>Title</h4>
@@ -68,6 +93,7 @@
 
   <article class="card">
     <div class="card-content">
+      <span class="close"><button class="close-btn">&times;</button></span>
       <img src="https://picsum.photos/id/66/480/320" alt="alt-text reads . . .">
       <div class="card-text">
         <h4>Title</h4>
@@ -79,6 +105,7 @@
 
 <article class="card">
   <div class="card-content">
+    <span class="close"><button class="close-btn">&times;</button></span>
     <img src="https://picsum.photos/id/177/480/320" alt="alt-text reads . . .">
     <div class="card-text">
       <h4>Title</h4>
@@ -90,6 +117,7 @@
 
 <article class="card">
   <div class="card-content">
+    <span class="close"><button class="close-btn">&times;</button></span>
     <img src="https://picsum.photos/id/198/480/320" alt="alt-text reads . . .">
     <div class="card-text">
       <h4>Title</h4>
@@ -101,6 +129,7 @@
 
 <article class="card">
   <div class="card-content">
+    <span class="close"><button class="close-btn">&times;</button></span>
     <img src="https://picsum.photos/id/243/480/320" alt="alt-text reads . . .">
     <div class="card-text">
       <h4>Title</h4>
@@ -112,6 +141,7 @@
 
 <article class="card">
   <div class="card-content">
+    <span class="close"><button class="close-btn">&times;</button></span>
     <img src="https://picsum.photos/id/416/480/320" alt="alt-text reads . . .">
     <div class="card-text">
       <h4>Title</h4>
@@ -123,9 +153,14 @@
 
     </section>
   </main>
+  <aside id="modal-wrap"></aside>
   <footer>
     <p>&copy;2022 Autumn Walker</p>
   </footer>
   <script src="js/page.js"></script>
+  <script src="https://unpkg.com/feather-icons"></script>
+  <script>
+    feather.replace();
+  </script>
 </body>
 </html>
