--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="top-nav">
-    <a href="#" class="nav-link logo">Site&nbsp;Title</a>
+    <a href="#" class="nav-link logo">A Trip to the Mountains&nbsp;</a>
     <nav id="site-nav" class="nav-wrap">
       <a href="#" class="nav-link">News</a>
       <a href="#" class="nav-link">About</a>
@@ -20,35 +20,144 @@
     <a href="#" class="nav-link" id="trigram" onclick="navToggle()"></a>
   </header>
   <main>
+  
+    </section>
     <section class="slideshow">
-      <!--slider goes here-->
-      <h2>slideshow here</h2>
+      <figure class="slides">
+        <img src="https://picsum.photos/seed/2nd/1440/520" />
+      </figure>
+      <figure class="slides">
+        <img src="https://picsum.photos/seed/3rd/1440/520" />
+      </figure>
+      <figure class="slides">
+        <img src="https://picsum.photos/seed/4th/1440/520" />
+      </figure>
+      <figure class="slides">
+        <img src="https://picsum.photos/seed/5th/1440/520" />
+      </figure>
+      <figure class="slides">
+        <img src="https://picsum.photos/seed/6th/1440/520" />
+      </figure>
       <div class="controls">
-        <button>&#8249;</button>
-        <button>&#8250;</button>
+        <button class="prev" onclick="plusSlides(-1)">&#8249;</button>
+        <button class="next" onclick="plusSlides(1)">&#8250;</button>
+      </div>
+      <div class="caption-wrap">
+        <p id="caption"></p>
       </div>
     </section>
-    <section class="hero">
-      <h2>Images from <em>Lorem Picsum</em></h2>
-      <p>Visit <a href="https://picsum.photos/">that site</a> to learn how to use them.</p>
-    </section>
+
+
+
+
+
     <section class="grid-cont">
       <article class="card">
-        <!-- <img src="https://picsum.photos/480/320?grayscale&random=1" alt="alt-text reads . . ."> -->
-        <h4>Heading for a bit</h4>
-        <p>Purus semper eget duis at tellus at urna condimentum mattis pellentesque id nibh tortor id aliquet lectus proin nibh nisl condimentum id venenatis a condimentum</p>
-        <button onclick="sampleFunction()">Click</button><!--when clicked, the function runs-->
-      </article><!--end article.card-->
-      
-      <!--
-        add more article.cards inside this section
-      -->
+        <div class="card-content">
+          <span class="close"><button class="close-btn">&times;</button></span>
+          <img src="https://picsum.photos/id/11/480/320" alt="alt-text reads . . .">
+          <div class="card-text">
+            <h4>Title</h4>
+            <p>Text</p>
+        </div>
+      </div>
+      <button class="open-modal"> View <i data-feather="chevrons-up"></i></button>
+    </article><!--end article.card-->
+
+    <article class="card">
+      <div class="card-content">
+        <span class="close"><button class="close-btn">&times;</button></span>
+        <img src="https://picsum.photos/id/10/480/320" alt="alt-text reads . . .">
+        <div class="card-text">
+          <h4>Title</h4>
+          <p>Text</p>
+      </div>
+    </div>
+    <button class="open-modal">View <i data-feather="chevrons-up"></i></button>
+    </article><!--end article.card-->
+
+    <article class="card">
+      <div class="card-content">
+        <span class="close"><button class="close-btn">&times;</button></span>
+        <img src="https://picsum.photos/id/432/480/320" alt="alt-text reads . . .">
+        <div class="card-text">
+          <h4>Title</h4>
+          <p>Text</p>
+      </div>
+    </div>
+    <button class="open-modal">View <i data-feather="chevrons-up"></i></button>
+  </article><!--end article.card-->
+
+  <article class="card">
+    <div class="card-content">
+      <span class="close"><button class="close-btn">&times;</button></span>
+      <img src="https://picsum.photos/id/66/480/320" alt="alt-text reads . . .">
+      <div class="card-text">
+        <h4>Title</h4>
+        <p>Text</p>
+    </div>
+  </div>
+  <button class="open-modal">View <i data-feather="chevrons-up"></i></button>
+</article><!--end article.card-->
+
+<article class="card">
+  <div class="card-content">
+    <span class="close"><button class="close-btn">&times;</button></span>
+    <img src="https://picsum.photos/id/177/480/320" alt="alt-text reads . . .">
+    <div class="card-text">
+      <h4>Title</h4>
+      <p>Text</p>
+  </div>
+</div>
+<button class="open-modal">View <i data-feather="chevrons-up"></i></button>
+</article><!--end article.card-->
+
+<article class="card">
+  <div class="card-content">
+    <span class="close"><button class="close-btn">&times;</button></span>
+    <img src="https://picsum.photos/id/198/480/320" alt="alt-text reads . . .">
+    <div class="card-text">
+      <h4>Title</h4>
+      <p>Text</p>
+  </div>
+</div>
+<button class="open-modal">View <i data-feather="chevrons-up"></i></button>
+</article><!--end article.card-->
+
+<article class="card">
+  <div class="card-content">
+    <span class="close"><button class="close-btn">&times;</button></span>
+    <img src="https://picsum.photos/id/243/480/320" alt="alt-text reads . . .">
+    <div class="card-text">
+      <h4>Title</h4>
+      <p>Text</p>
+  </div>
+</div>
+<button class="open-modal">View <i data-feather="chevrons-up"></i></button>
+</article><!--end article.card-->
+
+<article class="card">
+  <div class="card-content">
+    <span class="close"><button class="close-btn">&times;</button></span>
+    <img src="https://picsum.photos/id/416/480/320" alt="alt-text reads . . .">
+    <div class="card-text">
+      <h4>Title</h4>
+      <p>Text</p>
+  </div>
+</div>
+<button class="open-modal">View <i data-feather="chevrons-up"></i></button>
+</article><!--end article.card-->
 
     </section>
   </main>
+  <aside id="modal-wrap"></aside>
   <footer>
-    <p>&copy;2022 Your Name</p>
+    <p>&copy;2022 Autumn Walker</p>
   </footer>
   <script src="js/page.js"></script>
+  <script src="https://unpkg.com/feather-icons"></script>
+  <script>
+    feather.replace();
+  </script>
 </body>
 </html>
