--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
       alt="Mountain 5" />
       <img class="thumb" src="https://picsum.photos/id/198/160/60" onclick="currentSlide(6)" 
       alt="Mountain 6" />
-      <img class="thumb" src="https://picsum.photos/id/243/160/60" onclick="currentSlide(6)" 
+      <img class="thumb" src="https://picsum.photos/id/243/160/60" onclick="currentSlide(7)" 
       alt="Mountain 7" />
-      <img class="thumb" src="https://picsum.photos/id/416/160/60" onclick="currentSlide(6)" 
+      <img class="thumb" src="https://picsum.photos/id/416/160/60" onclick="currentSlide(8)" 
       alt="Mountain 8" />
     </div>
 
@@ -80,8 +80,8 @@
           <span class="close" onclick="x()"><button class="close-btn">&times;</button></span>
           <img src="https://picsum.photos/id/11/480/320" alt="alt-text reads . . .">
           <div class="card-text">
-            <h4>Title</h4>
-            <p>Text</p>
+            <h4>Mountain 1</h4>
+            <p>"If the earth had a pulse it rose through the mountains, creating their bold silhouette . . .</p>
         </div>
       </div>
       <button class="open-modal" onclick="pop('11')"> View <i data-feather="chevrons-up"></i></button>
@@ -92,7 +92,7 @@
         <span class="close" onclick="x()"><button class="close-btn">&times;</button></span>
         <img src="https://picsum.photos/id/10/480/320" alt="alt-text reads . . .">
         <div class="card-text">
-          <h4>Title</h4>
+          <h4>Mountain 2</h4>
           <p>Text</p>
       </div>
     </div>
@@ -104,7 +104,7 @@
         <span class="close" onclick="x()"><button class="close-btn">&times;</button></span>
         <img src="https://picsum.photos/id/432/480/320" alt="alt-text reads . . .">
         <div class="card-text">
-          <h4>Title</h4>
+          <h4>Mountain 3</h4>
           <p>Text</p>
       </div>
     </div>
@@ -116,7 +116,7 @@
       <span class="close" onclick="x()"><button class="close-btn">&times;</button></span>
       <img src="https://picsum.photos/id/66/480/320" alt="alt-text reads . . .">
       <div class="card-text">
-        <h4>Title</h4>
+        <h4>Mountain 4</h4>
         <p>Text</p>
     </div>
   </div>
@@ -128,7 +128,7 @@
     <span class="close" onclick="x()"><button class="close-btn">&times;</button></span>
     <img src="https://picsum.photos/id/177/480/320" alt="alt-text reads . . .">
     <div class="card-text">
-      <h4>Title</h4>
+      <h4>Mountain 5</h4>
       <p>Text</p>
   </div>
 </div>
@@ -140,7 +140,7 @@
     <span class="close" onclick="x()"><button class="close-btn">&times;</button></span>
     <img src="https://picsum.photos/id/198/480/320" alt="alt-text reads . . .">
     <div class="card-text">
-      <h4>Title</h4>
+      <h4>Mountain 6</h4>
       <p>Text</p>
   </div>
 </div>
@@ -152,7 +152,7 @@
     <span class="close" onclick="x()"><button class="close-btn">&times;</button></span>
     <img src="https://picsum.photos/id/243/480/320" alt="alt-text reads . . .">
     <div class="card-text">
-      <h4>Title</h4>
+      <h4>Mountain 7</h4>
       <p>Text</p>
   </div>
 </div>
@@ -164,7 +164,7 @@
     <span class="close" onclick="x()"><button class="close-btn">&times;</button></span>
     <img src="https://picsum.photos/id/416/480/320" alt="alt-text reads . . .">
     <div class="card-text">
-      <h4>Title</h4>
+      <h4>Mountain 8</h4>
       <p>Text</p>
   </div>
 </div>
@@ -179,8 +179,7 @@
       <img src="" alt="alt-text reads . . ." id="picture">
       <div class="card-text none" id="11">
         <h4>Mountain 1</h4>
-        <p>Phasellus ut ipsum vel risus semper vulputate nec eu nisl. In fermentum lectus non nunc laoreet, non interdum justo aliquam. Sed imperdiet in quam nec luctus. Sed feugiat tincidunt lectus, ut commodo elit hendrerit quis. Nam interdum rhoncus erat, vitae aliquam quam auctor non.</p>
-        <p>Aliquam id pellentesque enim, eu tincidunt felis. Donec sagittis ipsum vel porttitor bibendum. Aenean eget facilisis eros. Vestibulum vel purus et dui varius finibus. Vivamus aliquet ligula et sem sollicitudin, sit amet dictum justo sodales.</p>
+        <p>"If the earth had a pulse it rose through the mountains, creating their bold silhouette. To my eye, their peaks are the green line of a doctor's graph. I saw those rocks at dawn, those slopes that give home to so much life, a foundation for trees and shrubs, grass and ferns. With blue above and below, in the sky and lake, ever lightening as the sun rose, I knew it would be a good day... I just knew."</p>
       </div>     
       <div class="card-text none" id="10">
         <h4>Mountain 2</h4>
